# alkabi-rs

./: Cargo.toml  DESIGN.md  README.md
crates/alkabi/: Cargo.toml
crates/alkabi-extract/: Cargo.toml
crates/alkabi-extract/src/: main.rs
crates/alkabi-macros/: Cargo.toml
crates/alkabi-macros/src/: abitype.rs  lib.rs  message.rs  util.rs
crates/alkabi/src/: abi.rs  abi_return.rs  borsh_io.rs  extract.rs  legacy.rs  lib.rs  plan.rs  schema.rs  types.rs  witness.rs
crates/alkabi/src/analysis/: fit.rs  host.rs  list.rs  mod.rs  synth.rs  verify.rs
crates/alkabi/src/analysis/lift/: interp.rs  interp_exec.rs  mod.rs  module.rs  sym.rs
crates/alkabi/tests/: derive.rs  plan.rs
